k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mail
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: mail1.felder-edv.at
      http:
        paths:
          - backend:
              serviceName: mail
              servicePort: 8080
  tls:
    - hosts:
        - mail1.felder-edv.at
      secretName: mail-tls
